--- a/package.json
+++ b/package.json
@@ -1,45 +1,70 @@
 {
-  "name": "depd",
-  "description": "Deprecate all the things",
-  "version": "2.0.0",
-  "author": "Douglas Christopher Wilson <doug@somethingdoug.com>",
+  "name": "docusign-esign",
+  "version": "8.1.0",
+  "description": "Docusign Node.js API client.",
   "license": "MIT",
-  "keywords": [
-    "deprecate",
-    "deprecated"
+  "main": "src/index.js",
+  "author": "DocuSign Developer Center <devcenter@docusign.com>",
+  "contributors": [
+    "https://github.com/docusign/docusign-node-client/contributors"
   ],
-  "repository": "dougwilson/nodejs-depd",
-  "browser": "lib/browser/index.js",
-  "devDependencies": {
-    "benchmark": "2.1.4",
-    "beautify-benchmark": "0.2.4",
-    "eslint": "5.7.0",
-    "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-markdown": "1.0.0-beta.7",
-    "eslint-plugin-node": "7.0.1",
-    "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-standard": "4.0.0",
-    "istanbul": "0.4.5",
-    "mocha": "5.2.0",
-    "safe-buffer": "5.1.2",
-    "uid-safe": "2.1.5"
-  },
   "files": [
-    "lib/",
-    "History.md",
-    "LICENSE",
-    "index.js",
-    "Readme.md"
+    "src"
+  ],
+  "keywords": [
+    "docusign",
+    "signature",
+    "esignature",
+    "esign",
+    "digital",
+    "electronic",
+    "transaction",
+    "document",
+    "certificate",
+    "DTM",
+    "PDF"
   ],
   "engines": {
-    "node": ">= 0.8"
+    "node": ">=2.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/docusign/docusign-node-client.git"
   },
   "scripts": {
-    "bench": "node benchmark/index.js",
-    "lint": "eslint --plugin markdown --ext js,md .",
-    "test": "mocha --reporter spec --bail test/",
-    "test-ci": "istanbul cover --print=none node_modules/mocha/bin/_mocha -- --reporter spec test/ && istanbul report lcovonly text-summary",
-    "test-cov": "istanbul cover --print=none node_modules/mocha/bin/_mocha -- --reporter dot test/ && istanbul report lcov text-summary"
+    "docs": "npm run update-docs && git add docs/ && git commit -m 'update docs' && npm run push-docs",
+    "push-docs": "git subtree push --prefix docs origin gh-pages",
+    "update-docs": "./node_modules/.bin/jsdoc -c .jsdoc.json",
+    "check-config": "./scripts/check-config.js",
+    "test": "semistandard --fix && ./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter --timeout 60000"
+  },
+  "semistandard": {
+    "globals": [
+      "before",
+      "describe",
+      "it"
+    ],
+    "ignore": [
+      "/src",
+      "/docs",
+      "/scripts"
+    ]
+  },
+  "dependencies": {    
+    "axios": "^1.6.8",
+    "@devhigley/parse-proxy":"^1.0.3",        
+    "csv-stringify": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",    
+    "passport-oauth2": "^1.6.1",    
+    "safe-buffer": "^5.1.2"    
+  },
+  "devDependencies": {
+    "docdash": "0.4.0",
+    "expect.js": "~0.3.1",
+    "jsdoc": "3.6.10",
+    "mocha": "~5.0.4",
+    "mocha-junit-reporter": "^1.18.0",
+    "pdf-parse-fork": "^1.2.0",
+    "semistandard": "^12.0.1"
   }
 }
