--- a/package.json
+++ b/package.json
@@ -1,70 +1,46 @@
 {
-  "name": "docusign-esign",
-  "version": "8.1.0",
-  "description": "Docusign Node.js API client.",
-  "license": "MIT",
-  "main": "src/index.js",
-  "author": "DocuSign Developer Center <devcenter@docusign.com>",
-  "contributors": [
-    "https://github.com/docusign/docusign-node-client/contributors"
-  ],
-  "files": [
-    "src"
-  ],
-  "keywords": [
-    "docusign",
-    "signature",
-    "esignature",
-    "esign",
-    "digital",
-    "electronic",
-    "transaction",
-    "document",
-    "certificate",
-    "DTM",
-    "PDF"
-  ],
-  "engines": {
-    "node": ">=2.2.1"
+  "name": "ecdsa-sig-formatter",
+  "version": "1.0.11",
+  "description": "Translate ECDSA signatures between ASN.1/DER and JOSE-style concatenation",
+  "main": "src/ecdsa-sig-formatter.js",
+  "scripts": {
+    "check-style": "eslint .",
+    "pretest": "npm run check-style",
+    "test": "istanbul cover --root src _mocha -- spec",
+    "report-cov": "cat ./coverage/lcov.info | coveralls"
   },
+  "typings": "./src/ecdsa-sig-formatter.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/docusign/docusign-node-client.git"
+    "url": "git+ssh://git@github.com/Brightspace/node-ecdsa-sig-formatter.git"
   },
-  "scripts": {
-    "docs": "npm run update-docs && git add docs/ && git commit -m 'update docs' && npm run push-docs",
-    "push-docs": "git subtree push --prefix docs origin gh-pages",
-    "update-docs": "./node_modules/.bin/jsdoc -c .jsdoc.json",
-    "check-config": "./scripts/check-config.js",
-    "test": "semistandard --fix && ./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter --timeout 60000"
+  "keywords": [
+    "ecdsa",
+    "der",
+    "asn.1",
+    "jwt",
+    "jwa",
+    "jsonwebtoken",
+    "jose"
+  ],
+  "author": "D2L Corporation",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/Brightspace/node-ecdsa-sig-formatter/issues"
   },
-  "semistandard": {
-    "globals": [
-      "before",
-      "describe",
-      "it"
-    ],
-    "ignore": [
-      "/src",
-      "/docs",
-      "/scripts"
-    ]
-  },
-  "dependencies": {    
-    "axios": "^1.6.8",
-    "@devhigley/parse-proxy":"^1.0.3",        
-    "csv-stringify": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",    
-    "passport-oauth2": "^1.6.1",    
-    "safe-buffer": "^5.1.2"    
+  "homepage": "https://github.com/Brightspace/node-ecdsa-sig-formatter#readme",
+  "dependencies": {
+    "safe-buffer": "^5.0.1"
   },
   "devDependencies": {
-    "docdash": "0.4.0",
-    "expect.js": "~0.3.1",
-    "jsdoc": "3.6.10",
-    "mocha": "~5.0.4",
-    "mocha-junit-reporter": "^1.18.0",
-    "pdf-parse-fork": "^1.2.0",
-    "semistandard": "^12.0.1"
+    "bench": "^0.3.6",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.12.0",
+    "eslint-config-brightspace": "^0.2.1",
+    "istanbul": "^0.4.3",
+    "jwk-to-pem": "^1.2.5",
+    "mocha": "^2.5.3",
+    "native-crypto": "^1.7.0"
   }
 }
