--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lodash.includes",
-  "version": "4.3.0",
-  "description": "The lodash method `_.includes` exported as a module.",
+  "name": "lodash.once",
+  "version": "4.1.1",
+  "description": "The lodash method `_.once` exported as a module.",
   "homepage": "https://lodash.com/",
   "icon": "https://lodash.com/icon.svg",
   "license": "MIT",
-  "keywords": "lodash-modularized, includes",
+  "keywords": "lodash-modularized, once",
   "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
   "contributors": [
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
